2012-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_compat.c (ParseGeometry): Use strlcpy() rather than
	strncpy().
	(CopyMagickString): Depend on strlcpy() because we provide it if
	it is missing.

	* coders/xcf.c (ReadXCFImage): Now respects image subimage and
	subrange members so that returned image layers may be selected.
	Based on patch from SourceForge issue 3513025 "XCF reads all
	layers all the time".

	* magick/resize.c (ThumbnailImage): Thumbnail default filter is
	intended to be the box filter, but allow the user to override the
	filter used.  Resolves SourceForge issue 3513239 "-filter command
	line argument ignored".

2012-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand, MogrifyImageCommand):
	Added support for '+noise random' and '-operator noise-random' to
	'convert' and 'mogrify'.

	* magick/effect.c (AddNoiseImage): Added support for RandomNoise.
	(AddNoiseImageChannel): Added support for RandomNoise.

	* magick/enum_strings.c (StringToNoiseType): New function to
	convert a string to a NoiseType enumeration value.
	(NoiseTypeToString): New function to convert a NoiseType
	enumeration value into a string.

	* PerlMagick/Magick.xs: Added support for RandomNoise.

	* magick/operator.c (QuantumOperatorRegionImage): Added support for
	RandomNoise.

	* magick/effect.c (AddNoiseImageChannel): Added support for
	RandomNoise.

	* magick/gem.c (GenerateDifferentialNoise): Added support for
	RandomNoise.

	* magick/random.h (MagickRandomRealInlined): The span of
	MagickRandomRealInlined() is now slightly more accurate.

	* magick/image.h (enum NoiseType): New enumeration value RandomNoise.

2012-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Add support for -repage option
	to composite, convert, mogrify, and montage subcommands.  Resets
	or adjusts the current image page offsets based on a provided
	geometry specification.
