@@ -42,7 +42,8 @@
 <li>wand/magick_compat.c (ParseGeometry): Use strlcpy() rather than
 strncpy().
 (CopyMagickString): Depend on strlcpy() because we provide it if
-it is missing.</li>
+it is missing.
+(ConcatenateMagickString): Depend on strlcat().</li>
 <li>coders/xcf.c (ReadXCFImage): Now respects image subimage and
 subrange members so that returned image layers may be selected.
 Based on patch from SourceForge issue 3513025 &quot;XCF reads all
